--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,58 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color:#f2f3f3
 }
 
 a {
   color: #00B7FF;
 }
+
+.header{
+  display:flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.header-left{
+  display:flex;
+}
+  .title-header{
+    font-size: 25px;
+    margin-left: 20px;
+  }
+  .logo-header{
+    filter: invert(99%) sepia(5%) saturate(122%) hue-rotate(76deg) brightness(120%) contrast(100%);
+  }
+
+  .header-right{
+    display:flex;
+    align-items: center;
+  }
+.logo-header-div{
+  display:flex;
+  justify-content: space-between;
+}
+
+.nav-link{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 12px 20px 12px 20px;
+  background-color: #2c2f31;
+  border-radius: 12px;
+  margin-left: 20px;
+}
+.nav-link:hover{
+  background-color: #111213;
+}
+  .nav-text{
+    display:block;
+    margin:auto;
+    color: white;
+  }
+  .d-block{
+    display:block;
+    margin:auto;
+    margin-top: 5%;
+    filter: invert(100%) sepia(100%) saturate(38%) hue-rotate(321deg) brightness(110%) contrast(110%);
+  }
