--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,30 @@
 doctype html
 html
   head
-    title= title
+    title The Comment Club
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css", integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js", integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV", crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    header
+      div.px-3.py-2.bg-dark.header
+        div.container
+          div.d-flex.flex-wrap.logo-header-div
+            div.header-left
+              a(href='/')
+                img.bi.logo.logo-header(src='/images/title-logo.svg' height='60')
+                a.d-flex.align-items-center.my-lg-0.me-lg-auto.text-white.text-decoration-none.title-header(href='/') The Comment Club
+            
+            div.header-right
+              ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
+                li.nav-link.text-white 
+                  a(href='/log-in')
+                    span.nav-text Log in
+                li.nav-link.text-white
+                  a(href='/sign-up')
+                    span.nav-text Sign up
+    div.content
+      block content
