--- a/views/login_form.pug
+++ b/views/login_form.pug
@@ -2,4 +2,24 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Please log-in:
+
+
+  form(method='POST' action='')
+    div.form-group
+      label(for='email') Email:
+      input#email.form-control(
+        type='email', 
+        placeholder='Email' 
+        name='email' 
+        required = 'true'
+        value=(undefined=== user ? '' : user.email))
+
+      label(for='password') Password:
+      input#password.form-control(
+        type='password', 
+        placeholder='Password' 
+        name='password' 
+        required = 'true'
+      )
+    button.btn.btn-primary(type='submit') Submit
