implementing password hashing

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html
               a(href='/')
                 img.bi.logo.logo-header(src='/images/title-logo.svg' height='60')
                 a.d-flex.align-items-center.my-lg-0.me-lg-auto.text-white.text-decoration-none.title-header(href='/') The Comment Club
-            if !user
+            if !currentUser
               div.header-right
                 ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
                   li.nav-link.text-white 
@@ -26,6 +26,9 @@ html
                   li.nav-link.text-white
                     a(href='/auth/sign-up')
                       span.nav-text Sign up
+                  li.nav-link.text-white
+                    a(href="/log-out")
+                      span.nav-text Log out
             else 
               div.header-right
                 ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
