--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
     h3=user
-    if user
+    if currentUser
       h1 WELCOME BACK #{user.username}
       a(href="/log-out") LOG OUT
 
