--- a/views/signup_form.pug
+++ b/views/signup_form.pug
@@ -1,9 +1,11 @@
 extends layout
 
 block content
-  h1= title
+  h1=title
   p Please sign-up:
 
+  p.auth-alternative Already registered? 
+    a(href="log-in") Log in
 
   form(method='POST' action='')
     div.form-group
@@ -30,6 +32,8 @@ block content
         name='username' 
         required = 'true'
         value=(undefined=== user ? '' : user.username))
+      if (error)
+        p(style="color: red;") #{error}
 
       label(for='password') Password:
       input#password.form-control(
@@ -46,5 +50,10 @@ block content
         name='confPassword' 
         required = 'true'
       )
+      if (passwordConfirmationError)
+        p(style="color: red;") #{passwordConfirmationError}
 
     button.btn.btn-primary(type='submit') Submit
+
+  if (errors)
+    p #{errors}
