--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,13 +10,17 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     header
-      div.px-3.py-2.bg-dark.header
+      div.px-3.py-2.header
         div.container
           div.d-flex.flex-wrap.logo-header-div
             div.header-left
               a(href='/')
                 img.bi.logo.logo-header(src='/images/title-logo.svg' height='60')
                 a.d-flex.align-items-center.my-lg-0.me-lg-auto.text-white.text-decoration-none.title-header(href='/') The Comment Club
+              div.logo-text-div
+                a(href='/').me-lg-auto.text-white.text-decoration-none.logo-text-up CO
+                a(href='/').me-lg-auto.text-white.text-decoration-none.logo-text-down CL
+
             if !user
               div.header-right
                 ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
@@ -33,8 +37,9 @@ html
               div.header-right
                 ul.nav.col-lg-auto.justify-content-center.my-md-0.text-small.nav-right
                   div.text-white.welcome-txt Welcome, #{user.name}
-                  a(href="/log-out")
-                    span.nav-text Log out
+                  li.nav-link.text-white
+                    a(href="/log-out")
+                      span.nav-text Log out
 
     div.content
       block content
