--- a/views/index.pug
+++ b/views/index.pug
@@ -5,21 +5,24 @@ block content
       if (user)
         div.homepage-banner
           div.left-hmp-banner
-            h1=title 
-            h3 Welcome back to the Club #{user.username} !
+            h1.title-hmp=title 
+            h3.heading-hmp Welcome back to the Club #{user.username} !
             span Below here, you can see all the comments posted by all our members. Feel free to share with them!
-            a(href="/log-out") LOG OUT
+            a.log-in-out-btn(href="/log-out") LOG OUT
           div.right-hmp-banner
               img.hmp-pic(src='/images/hmp-pic.jpg' height='90%')
 
       else
         div.homepage-banner
           div.left-hmp-banner
-            h1=title 
-            h3 Please feel free to log-in and join the club.
+            h1.title-hmp=title 
+            h3.heading-hmp This club was created centuries ago to share thoughts and ideas about the society. Today, our goal still remains and keeps his doors open. Please feel free to log-in and join the club to share your thoughts.
             h5.password-div Our password is 1234
-            a(href='/auth/log-in') Log-in
+            a.log-in-out-btn(href='/auth/log-in') Log-in
           div.right-hmp-banner
               img.hmp-pic(src='/images/hmp-pic.jpg' height='90%')
+
+      div.all-comments-div
+        header checkthis out
 
       // SHOW ALL COMMENTS BELOW
