--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 
 body {
   font: 14px 'Libre Caslon Text', serif;
-  background-color:#000000
+  background-color:#101010
 }
 
 a {
@@ -13,8 +12,11 @@ a {
 
 
 /* HEADER CSS */
-.container{
-  margin-left: 20%;
+.container-div{
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .header{
   margin-bottom: 40px;
@@ -24,9 +26,26 @@ a {
   justify-content: center;
   text-align: center;
 }
+  .logo-text-div{
+    display:flex;
+    position: relative;
+    font-size: 20px;
+    font-weight: 800;
+    color:rgb(68, 68, 68);
+  }
+    .logo-text-down{
+      position:absolute;
+      top:14px;
+      color:rgb(68, 68, 68);
+    }
+    .logo-text-up{
+      position:absolute;
+      top:4px;
+      color:rgb(68, 68, 68);
+    }
   .title-header{
     font-size: 25px;
-    margin-left: 20px;
+    margin-left: 50px;
   }
   .logo-header{
     filter: invert(99%) sepia(5%) saturate(122%) hue-rotate(76deg) brightness(120%) contrast(100%);
@@ -35,9 +54,13 @@ a {
     display:flex;
     align-items: center;
   }
+    .header-btn{
+      font-family: 'Noto Sans JP', sans-serif;
+    }
 .logo-header-div{
   display:flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .nav-link{
@@ -48,6 +71,8 @@ a {
   background-color: #2c2f31;
   border-radius: 12px;
   margin-left: 20px;
+  font-family: 'Libre Caslon Text', serif;
+
 }
 .welcome-txt{
   margin-left: 20px;
@@ -74,28 +99,63 @@ a {
 
 /* BODY CSS */
 .content{
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
   .homepage-banner{
-    display:flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 90%;
-    height: 90%;
-    position: relative;
+    height: 50%;
     margin: 30px;
   }
     .left-hmp-banner{
-      width: 600px;
-      height: 40%;
-      position: absolute;
-      top: 30%;
-      left: 0;
-      opacity: 0.5;   
-      align-items: center;
-      background-color: rgb(153, 151, 151);
+      width: 100%;
+      margin-right: 8%;
+
     }
-    .hmp-pic{
-      z-index: 9;
-      left: 40%;
-      margin: 30px;
+      .title-hmp{
+        color:white;
+        width:100%;
+        padding-bottom: 40px;
+      }
+      .heading-hmp{
+        color: grey;
+        font-size: 20px;
+        font-style: italic;
+      }
+      .password-div{
+        margin-bottom: 60px;
+      }
+      .log-in-out-btn{
+        padding: 9px;
+        font-size: 20px;
+        padding-left: 40px;
+        padding-right: 40px;
+        border-radius: 20px;
+        margin-top: 60px;
+        background-color: rgb(99, 99, 99);
+        opacity: 0.7;
+        color:white;
+        text-decoration: none;
+      }
+      .log-in-out-btn:hover{
+        text-decoration: none;
+        color:white;
+        background-color: rgb(207, 205, 205);
+        color:grey;
     }
+      .right-hmp-banner{
+        width: 50%;
+        align-items: center;
+      }
+        .hmp-pic{
+          float:right;
+          overflow:hidden;
+          object-fit: cover;
+          height: fit-content; 
+          width:100%;        
+          margin-top: 60px;
+          margin-bottom: 60px;
+        }
