--- a/views/user_detail.pug
+++ b/views/user_detail.pug
@@ -14,3 +14,4 @@ block content
         a.log-in-out-btn(href="/auth/log-in") Log-in
         a.log-in-out-btn(href="/auth/sign-up") Sign-in
 
+//- Shows all his comments and ability to add new one
