--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,10 @@ block content
           div.right-hmp-banner
               img.hmp-pic(src='/images/hmp-pic.jpg' height='90%')
 
+
+          //- // Add possibility if not member but not PREMIUM
+
+
       else
         div.homepage-banner
           div.left-hmp-banner
@@ -25,4 +29,4 @@ block content
       div.all-comments-div
         header checkthis out
 
-      // SHOW ALL COMMENTS BELOW
+      //- // SHOW ALL COMMENTS BELOW
