implement comments display

--- a/views/add_premium.pug
+++ b/views/add_premium.pug
@@ -6,10 +6,10 @@ block content
 
     form(method='POST' action='')
       div.form-group
-        label(for='passcode') Enter the passcode to become PREMMIUM
+        label(for='passcode') Enter the passcode to become PREMIUM
         input#passcode.form-control(
         type='text', 
-        placeholder='passcode' 
+        placeholder='Enter the passcode' 
         name='passcode' 
         required = 'true'
         )
