--- a/views/nologin.pug
+++ b/views/nologin.pug
@@ -1,4 +1,7 @@
 extends layout
 
 block content
-  h1 NO LOGIN
+  h1 NO LOGIN ERROR 
+  h3 Please go back to the homepage: 
+    div.profile-btns
+        a.log-in-out-btn(href="/") Homepage
