--- a/views/comment_form.pug
+++ b/views/comment_form.pug
@@ -2,15 +2,20 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-
-
-    form.auth-form(action="/comment-form" method="POST")
-      h2= title 
+    div Add a new comment
+    form.auth-form(action="/users/comment/add" method="POST")
       div.title-container
         label(for="messageTitle") Title:
-        input#messageTitle(type="text" name="messageTitle" required="true" maxLength="50")
-      div.text-container
+        input#messageTitle(type="text" 
+          name="messageTitle" 
+          required="true" 
+          maxLength="30"
+        )
         label(for="messageText") Message:
-        input#messageText(type="text" name="messageText" required="true")
+        input#messageText(
+          type="text" 
+          name="messageText" 
+          required="true" 
+          maxLength="300"
+        )
       button(type="submit") Submit Message    
